--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
 @media (max-width: 28.75em) {
-    .contact-section-header > h2 {
-      font-size: 4rem;
-    }
-  }
+}
 
+body {
+    padding-top: 50px;
+}
 #welcome-section {
     height: 100vh;
+    border: solid;
 }
 
 #navbar {
@@ -14,3 +15,4 @@
     left: 0;
     width: 100%;
 }
+
